k8s/apps/homepage/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
spec:
  selector:
    app: homepage
  ports:
  - port: 80
    targetPort: 3000
